---------------------------------------------------------------------------------------------------
Version: 0.69.126
Date: ????
  Changes:
---------------------------------------------------------------------------------------------------
Version: 0.69.125
Date: 2025-11-10
  Changes:
    - Rubia now filters vehicle hitbox adjustment a little more stringently.
    - Banned some belt balancer mods from Rubia, because they allow leftward item teleportation.
---------------------------------------------------------------------------------------------------
Version: 0.69.124
Date: 2025-11-09
  Changes:
    - Compatibility with a space age overhaul called "Space Age Overhaul." Added compat recipe for steel.
---------------------------------------------------------------------------------------------------
Version: 0.69.123
Date: 2025-11-09
  Changes:
    - Slightly reduced hitboxes of car-like vehicles on Rubia. I tested this with a variety of vehicles for stability, but please report if anything breaks, and I'll have a quick hotfix up.
---------------------------------------------------------------------------------------------------
Version: 0.69.122
Date: 2025-11-05
  Changes:
    - Trashsteroid shields now spoil in 2 ticks. This blocks weird mods that let you collect trashsteroid remains from giving you free, useless shields. This fixes an issue right now for Schall Remains, but is future proof.
---------------------------------------------------------------------------------------------------
Version: 0.69.121
Date: 2025-10-29
  Changes:
    - Carbon steel compatibility.
    - Rebalanced utility sci and promethium sci recipes for when K2SO are installed.