@@ -255,6 +255,7 @@ rubia-craptonite-boots=Holmium boots
 rubia-craptonite-hook=Tungsten grappling hook
 rubia-craptonite-satchel=Carbon fiber-craptonite satchel
 rubia-craptonite-cannister=Gamer girl bathwater
+rubia-craptonite-eyedrop=Bathwater Eyedrops
 ;Other mods
 rubia-craptonite-circlet=Moshite circlet
 rubia-craptonite-earring=Plutonium earring
@@ -321,6 +322,7 @@ rubia-craptonite-boots=Craptonite-reinforced boots with holmium alloy trim and s
 rubia-craptonite-hook=A craptonite bracer with powerful mechanism that shoots a tungsten hook with a chain to reach things from greater distances.
 rubia-craptonite-satchel=A sturdy satchel made with strong carbon-fiber and a sturdy craptonite frame to hold more trash.
 rubia-craptonite-cannister=Keep a bottle of chilled Gamer Girl Bathwater in a craptonite-reinforced cannister. Chilled with Aquilean cryogenics, one sip will always make you feel energized, but a little sick.
+rubia-craptonite-eyedrop=Your eyes sting as they soak in gamer girl bathwater, all so She may enhance your vision. She demands tribute for Her blessing. Mod settings let you reject Her generosity.
 ;Other mods
 rubia-craptonite-circlet=A powerful craptonite circlet encrusted with a chunk of the galaxy's finest Moshite. You think it helps you commune with machines.
 rubia-craptonite-earring=A craptonite earing encrusted with plutonium to keep you warm, and guide neutrons to their proper place.
@@ -345,6 +347,7 @@ biofusion-bacteria-release=Propagation of key Gleba bacteria is no longer surfac
 rubia-craptonite-lamp=Increased character light radius in the trench.
 rubia-bio-utility-science-pack-unlock=__ITEM__utility-science-pack__ can now be made in __ENTITY__biochamber__ with higher efficiency.
 cargo-landing-pad-count=Cargo landing pads per planet: +__1__
+rubia-zoom-modifier=Zoom range +__1__%
 
 rubia-sniper-turret-attack-bonus=__ITEM__rubia-sniper-turret__ damage: +__1__
 
@@ -376,6 +379,7 @@ rubia-rocketizer-early-unlock=Rocketizer early unlock
 invert-trashsteroid-scaling=Invert trashsteroid visual scaling
 rubia-megabase-mode=Megabase mode
 rubia-tech-cost-multiplier=Rubia trigger tech cost multiplier
+rubia-zoom-change=Allow eyedrops
 rubia-renai-special-trajectories=Unique thrower inserter trajectories on Rubia
 
 [mod-setting-description]
@@ -388,6 +392,7 @@ rubia-rocketizer-early-unlock=Unlock the rocketizer alongside rocket silos (as t
 invert-trashsteroid-scaling=Flip trashsteroid scaling to become smaller as they make impact (instead of larger). Purely visual. Default OFF.
 rubia-megabase-mode=If turned on, it makes trashsteroids consume less UPS by making them immobile, but ONLY if very many trashsteroids are spawned. This alters mechanics. Default OFF.
 rubia-tech-cost-multiplier=Technologies for Rubia's trigger technologies are immune to standard tech cost multiplier settings. This setting multiplies the cost for these technologies. Bigger number = bigger cost. Default = 1.
+rubia-zoom-change=If turned off, eyedrops will have no effect. Default ON.
 rubia-renai-special-trajectories=If turned on, thrower inserters placed on Rubia will have unique trajectories. This causes greater UPS costs for Renai Transportation. Default=ON.
 
 [string-mod-setting]
